<resources>
    <string name="app_name">CustomDialog</string>
    <string name="action_settings">Settings</string>
    <string name="custom_dialog">Custom Dialog With Fragment</string>
    <string name="enter_data">Enter Data Here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_age">Your Age</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
</resources>
