<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_data"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/textFirstName"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textCapWords"
        android:layout_marginBottom="6dp"/>

    <EditText
        android:id="@+id/textLastName"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textCapWords"
        android:layout_marginBottom="6dp"/>
    <EditText
        android:id="@+id/textAge"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        android:inputType="textCapWords"
        android:layout_marginBottom="6dp"/>
    <LinearLayout
        android:id="@+id/btnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="end">

        <Button
            android:id="@+id/textBtnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/textBtnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>




</LinearLayout>